# fettler

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  config.toml  config.yml  conftest.py  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
examples/: main.py
fettler/: cli.py  constants.py  consumer.py  producer.py  server.py  settings.py  utils.py
fettler/server/: __init__.py  routes.py  schemas.py
mycacher/: cli.py  config.py
tests/: test_fettler.py
